--- a/src/components/styles/Game.css
+++ b/src/components/styles/Game.css
@@ -1,4 +1,6 @@
-
+.imFlexin {
+    display: flex;
+}
 
 /* 3 pokemon to find container styles */
 #monsImgContainer {
@@ -61,5 +63,17 @@
     background-color: aquamarine;
 }
 
+/* Game over screen */
 
-
+.GameOverScreen {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    z-index: 3;
+    background: rgba(128, 128, 128, 0.459);
+}
